Closes #41 - now check is perform for user active status #152 - Finished work on group-user relationship

--- a/AdminModule/Themes/Generic.xaml
+++ b/AdminModule/Themes/Generic.xaml
@@ -2,6 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewModels="clr-namespace:AdminModule.ViewModels"
                     xmlns:views="clr-namespace:AdminModule.Views">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../Views/UserAccess/PermissionGroupView.xaml" />
+        <ResourceDictionary Source="../Views/UserAccess/UserView.xaml" />
+    </ResourceDictionary.MergedDictionaries>
     <DataTemplate DataType="{x:Type viewModels:GroupEditDialogViewModel}">
         <views:GroupEditDialogView />
     </DataTemplate>
