--- a/AdminModule/Views/UserAccess/UserAccessManagerView.xaml
+++ b/AdminModule/Views/UserAccess/UserAccessManagerView.xaml
@@ -12,14 +12,6 @@
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModels:UserAccessManagerViewModel}">
     <UserControl.Resources>
-        <DataTemplate DataType="{x:Type viewModels:UserViewModel}">
-            <Button Content="{Binding FullName, Mode=OneTime}"
-                    Command="{Binding DataContext.SelectUserCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
-                    CommandParameter="{Binding}"
-                    Background="White"
-                    HorizontalContentAlignment="Left"
-                    Padding="5 0 0 0" />
-        </DataTemplate>
         <DataTemplate DataType="{x:Type viewModels:PermissionViewModel}">
             <Button Content="{Binding Name, Mode=OneTime}"
                     Command="{Binding DataContext.SelectPermissionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
@@ -27,80 +19,6 @@
                     Background="White"
                     HorizontalContentAlignment="Left"
                     Padding="5 0 0 0" />
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type viewModels:PermissionGroupViewModel}">
-            <DataTemplate.Resources>
-                <converters:MultiBoolToVisibilityConverter x:Key="AllowIncludeConverter"
-                                                           Condition="Mixed" />
-            </DataTemplate.Resources>
-            <Button
-                Command="{Binding DataContext.SelectGroupCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
-                CommandParameter="{Binding}"
-                Background="White"
-                HorizontalContentAlignment="Stretch"
-                Padding="5 0 0 0">
-                <Grid HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0"
-                               Text="{Binding Name}"
-                               TextWrapping="Wrap" />
-                    <StackPanel Grid.Column="2"
-                                Orientation="Horizontal"
-                                Opacity="0.5"
-                                x:Name="buttonsPanel">
-                        <Button Command="{Binding RequestCurrentUserIncludeCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Добавить выбранного пользователю в эту группу">
-                            <Button.Visibility>
-                                <MultiBinding Converter="{StaticResource AllowIncludeConverter}">
-                                    <Binding Path="IsInUserMode"
-                                             FallbackValue="{x:Static misc:StaticBoolean.False}"/>
-                                    <Binding Path="CurrentUserIsIncluded"
-                                             FallbackValue="{x:Static misc:StaticBoolean.False}"/>
-                                </MultiBinding>
-                            </Button.Visibility>
-                            <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/UserAdd48x48.png" />
-                        </Button>
-                        <Button Command="{Binding RequestCurrentUserExcludeCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Удалить выбранного пользователя из этой группы"
-                                Visibility="{Binding CurrentUserIsIncluded, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
-                            <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/UserRemove48x48.png" />
-                        </Button>
-                        <Button Command="{Binding RequestEditCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Редактировать название или описание группы">
-                            <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/Edit48x48.png" />
-                        </Button>
-                        <Button Command="{Binding RequestDeleteCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Удалить эту группу">
-                            <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/Remove.png" />
-                        </Button>
-                    </StackPanel>
-                </Grid>
-            </Button>
-            <DataTemplate.Triggers>
-                <Trigger Property="UIElement.IsMouseOver"
-                         Value="True">
-                    <Setter TargetName="buttonsPanel"
-                            Property="Opacity"
-                            Value="1" />
-                </Trigger>
-            </DataTemplate.Triggers>
         </DataTemplate>
         <converters:Converter x:Key="SecurityObjectTypeConverter"
                               DefaultValue="">
@@ -125,6 +43,12 @@
                                       To="Пользователь не состоит в группах" />
             <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
                                       To="Пользователь входит в группы" />
+        </converters:Converter>
+        <converters:Converter x:Key="UserGroupRelationshipConverter">
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                                      To="Пользователи, не входящие в группу" />
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                      To="Пользователи, состоящие в группе" />
         </converters:Converter>
     </UserControl.Resources>
     <Grid HorizontalAlignment="Stretch"
@@ -194,7 +118,30 @@
                              Grid.Column="0"
                              Grid.ColumnSpan="2"
                              Margin="5"
-                             ItemsSource="{Binding Users}" />
+                             ItemsSource="{Binding Users}">
+                        <ListBox.GroupStyle>
+                            <GroupStyle HidesIfEmpty="True">
+                                <GroupStyle.HeaderTemplate>
+                                    <DataTemplate DataType="{x:Type CollectionViewGroup}">
+                                        <Grid HorizontalAlignment="Stretch">
+                                            <Separator VerticalAlignment="Center"
+                                                           HorizontalAlignment="Stretch"
+                                                           Height="1"
+                                                           Background="Black" />
+                                            <Border Padding="2 0 2 0"
+                                                        HorizontalAlignment="Left"
+                                                        Background="White"
+                                                        VerticalAlignment="Center">
+                                                <TextBlock FontWeight="SemiBold"
+                                                               Text="{Binding Name, Converter={StaticResource UserGroupRelationshipConverter}}" />
+                                            </Border>
+
+                                        </Grid>
+                                    </DataTemplate>
+                                </GroupStyle.HeaderTemplate>
+                            </GroupStyle>
+                        </ListBox.GroupStyle>
+                    </ListBox>
                 </Grid>
                 <Border Grid.Column="1"
                         HorizontalAlignment="Stretch"
