--- a/AdminModule/Views/UserAccess/PermissionGroupView.xaml
+++ b/AdminModule/Views/UserAccess/PermissionGroupView.xaml
@@ -1,79 +1,97 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewModels="clr-namespace:AdminModule.ViewModels"
-                    xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
                     xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf">
     <DataTemplate DataType="{x:Type viewModels:PermissionGroupViewModel}">
         <DataTemplate.Resources>
             <converters:MultiBoolToVisibilityConverter x:Key="AllowIncludeConverter"
-                                                           Condition="Mixed" />
+                                                       Condition="Mixed" />
         </DataTemplate.Resources>
         <Button
-                Command="{Binding DataContext.SelectGroupCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
-                CommandParameter="{Binding}"
-                Background="White"
-                HorizontalContentAlignment="Stretch"
-                Padding="5 0 0 0">
+            Command="{Binding DataContext.SelectGroupCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
+            CommandParameter="{Binding}"
+            Background="White"
+            HorizontalContentAlignment="Stretch"
+            Padding="5 0 0 0">
             <Grid HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch">
+                  VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0"
-                               Text="{Binding Name}"
-                               TextWrapping="Wrap" />
+                           Text="{Binding Name}"
+                           TextWrapping="Wrap" />
                 <StackPanel Grid.Column="2"
-                                Orientation="Horizontal"
-                                Opacity="0.5"
-                                x:Name="buttonsPanel">
+                            Orientation="Horizontal"
+                            Opacity="0.5"
+                            x:Name="buttonsPanel">
                     <Button Command="{Binding RequestCurrentUserIncludeCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Добавить выбранного пользователю в эту группу">
+                            Margin="2"
+                            ToolTip="Добавить выбранного пользователя в эту группу">
                         <Button.Visibility>
                             <MultiBinding Converter="{StaticResource AllowIncludeConverter}">
-                                <Binding Path="IsInUserMode"
-                                             FallbackValue="{x:Static misc:StaticBoolean.False}"/>
-                                <Binding Path="CurrentUserIsIncluded"
-                                             FallbackValue="{x:Static misc:StaticBoolean.False}"/>
+                                <Binding Path="IsInUserMode" />
+                                <Binding Path="CurrentUserIsIncluded" />
                             </MultiBinding>
                         </Button.Visibility>
                         <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/UserAdd48x48.png" />
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/UserAdd48x48.png" />
                     </Button>
                     <Button Command="{Binding RequestCurrentUserExcludeCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Удалить выбранного пользователя из этой группы"
-                                Visibility="{Binding CurrentUserIsIncluded, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                            Margin="2"
+                            ToolTip="Удалить выбранного пользователя из этой группы"
+                            Visibility="{Binding CurrentUserIsIncluded, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
                         <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/UserRemove48x48.png" />
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/UserRemove48x48.png" />
+                    </Button>
+                    <Button Command="{Binding RequestCurrentPermissionIncludeCommand, Mode=OneTime}"
+                            Margin="2"
+                            ToolTip="Добавить выбранное право в эту группу">
+                        <Button.Visibility>
+                            <MultiBinding Converter="{StaticResource AllowIncludeConverter}">
+                                <Binding Path="IsInPermissionMode" />
+                                <Binding Path="CurrentPermissionIsIncluded" />
+                            </MultiBinding>
+                        </Button.Visibility>
+                        <Image Width="20"
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/UserAdd48x48.png" />
+                    </Button>
+                    <Button Command="{Binding RequestCurrentPermissionExcludeCommand, Mode=OneTime}"
+                            Margin="2"
+                            ToolTip="Удалить выбранное право из этой группы"
+                            Visibility="{Binding CurrentPermissionIsIncluded, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                        <Image Width="20"
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/UserRemove48x48.png" />
                     </Button>
                     <Button Command="{Binding RequestEditCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Редактировать название или описание группы">
+                            Margin="2"
+                            ToolTip="Редактировать название или описание группы">
                         <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/Edit48x48.png" />
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/Edit48x48.png" />
                     </Button>
                     <Button Command="{Binding RequestDeleteCommand, Mode=OneTime}"
-                                Margin="2"
-                                ToolTip="Удалить эту группу">
+                            Margin="2"
+                            ToolTip="Удалить эту группу">
                         <Image Width="20"
-                                   Height="20"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/Remove.png" />
+                               Height="20"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/Remove.png" />
                     </Button>
                 </StackPanel>
             </Grid>
         </Button>
         <DataTemplate.Triggers>
             <Trigger Property="UIElement.IsMouseOver"
-                         Value="True">
+                     Value="True">
                 <Setter TargetName="buttonsPanel"
-                            Property="Opacity"
-                            Value="1" />
+                        Property="Opacity"
+                        Value="1" />
             </Trigger>
         </DataTemplate.Triggers>
     </DataTemplate>
