#43, #67, #152 - added draft version of form for creating and editing user

--- a/AdminModule/Themes/Generic.xaml
+++ b/AdminModule/Themes/Generic.xaml
@@ -6,8 +6,12 @@
         <ResourceDictionary Source="../Views/UserAccess/PermissionGroupView.xaml" />
         <ResourceDictionary Source="../Views/UserAccess/UserView.xaml" />
         <ResourceDictionary Source="../Views/UserAccess/PermissionView.xaml" />
+        <ResourceDictionary Source="../Views/UserAccess/PersonSearchDialogView.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <DataTemplate DataType="{x:Type viewModels:GroupEditDialogViewModel}">
         <views:GroupEditDialogView />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type viewModels:UserPropertiesDialogViewModel}">
+        <views:UserPropertiesDialogView />
     </DataTemplate>
 </ResourceDictionary>
